# DedScope

./: CMakeLists.txt  LICENSE  README.md  ROADMAP.md
include/Common/: Constants.h
include/Memory/: Memory.h
include/Module/: Module.h  ModuleManager.h
include/Process/: Process.h  ProcessManager.h
include/Scanner/: Pattern.h  PatternParser.h
include/Tests/: MemoryTests.h  ModuleTests.h  PatternTests.h  ProcessTests.h
include/Utils/: Console.h  Logger.h
src/: main.cpp
src/Memory/: Memory.cpp
src/Module/: Module.cpp  ModuleManager.cpp
src/Process/: Process.cpp  ProcessManager.cpp
src/Scanner/: Pattern.cpp  PatternParser.cpp
src/Utils/: Console.cpp  Logger.cpp
tests/: MainTests.cpp  MemoryTests.cpp  ModuleTests.cpp  PatternTests.cpp  ProcessTests.cpp
